# vala-project

./: LICENSE  README.md  meson.build  vala-project.code-workspace
src/bar/: a.vala  meson.build
src/foo/: a.vala  b.vala  meson.build
src/runme/: main.vala  meson.build
